--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sweater?serverTimezone=Europe/Kiev
-spring.datasource.username=root
+spring.datasource.username=spezdm
 spring.datasource.password=asdqwe123
+
+spring.mustache.expose-request-attributes=true
