--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sweater?serverTi
 spring.datasource.username=spezdm
 spring.datasource.password=asdqwe123
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
