--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=spezdm
 spring.datasource.password=asdqwe123
 
 spring.freemarker.expose-request-attributes=true
+upload.path=C:/Users/Dmitry/IdeaProjects/sweater/uploads
