--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=asdqwe123
 
 spring.freemarker.expose-request-attributes=true
 upload.path=C:/Users/Dmitry/IdeaProjects/sweater/uploads
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
