--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=asdqwe123
 spring.freemarker.expose-request-attributes=true
 upload.path=C:/Users/Dmitry/IdeaProjects/sweater/uploads
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=spez.dm@gmail.com
+spring.mail.password=426*642Drosinka2
+spring.mail.port=587
+spring.mail.protocol=smtps
+mail.debug=true
