--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.freemarker.expose-request-attributes=true
 upload.path=C:/Users/Dmitry/IdeaProjects/sweater/uploads
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=spez.dm@gmail.com
-spring.mail.password=426*642Drosinka2
-spring.mail.port=587
-spring.mail.protocol=smtps
-mail.debug=true
+spring.mail.host=
+spring.mail.username=
+spring.mail.password=
+spring.mail.port=
+spring.mail.protocol=
+mail.debug=
