--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+<!--            <version>4.1.2</version>-->
         </dependency>
                <!-- Security -->
         <dependency>
@@ -83,7 +84,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <version>5.1.4</version>
+<!--                <version>5.2.4</version>-->
             </plugin>
         </plugins>
     </build>
